[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Jetforce"
version = "0.10.1"
description = "An Experimental Gemini Server"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Other/Proprietary License" }
keywords = ["gemini", "server", "tcp", "gopher", "asyncio"]
authors = [
    { name = "Michael Lazar", email = "lazar.michael22@gmail.com" }
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "twisted>=21.7.0",
    "service_identity",
    "idna",
    "pyopenssl",
]

[project.optional-dependencies]
test = [
    "pytest",
    "mypy",
    "types-pyOpenSSL",
]

[project.urls]
Homepage = "https://github.com/michael-lazar/jetforce"

[project.scripts]
jetforce = "jetforce.__main__:main"
jetforce-client = "jetforce_client:run_client"

[tool.setuptools.packages.find]
include = ["jetforce*"]

[tool.setuptools.package-data]
jetforce = ["py.typed"]

[tool.setuptools]
py-modules = ["jetforce_client"]
zip-safe = false

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"

[tool.ruff]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "PT", # flake8-pytest-style
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
]
line-length = 88
target-version = "py37"

ignore = [
    "E501", # Line length is enforced by black
    "PT012", # Allow pytest.raises with context managers
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"
